--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,8 @@
 	"description": "",
 	"dependencies": {
 		"cors": "^2.8.5",
-		"express": "^4.21.0"
+		"dotenv": "^16.4.5",
+		"express": "^4.21.0",
+		"openai": "^4.65.0"
 	}
 }
